--- a/css/style1.css
+++ b/css/style1.css
@@ -47,7 +47,7 @@ nav{
     display: none;
 }
 .sec1{
-    background-image: url(/images/slide-1.webp);
+    background-image: url(../images/slide-1.webp);
     width: 100%;
     height: 100vh;
     clip-path: polygon(49% 100%, 100% 92%, 100% 0%, 0% 0%, 0% 92%);
