--- a/css/style1.css
+++ b/css/style1.css
@@ -7,6 +7,13 @@ body{
     width: 100vw;
     overflow-x: hidden;
 }
+::selection{
+    background-color: green;
+    color: greenyellow;
+}
+html{
+    scroll-behavior: smooth;
+}
 /* the header styling */
 .desktop-header{
     display: flex;
@@ -146,11 +153,768 @@ textarea{
     border: none;
 }
 form #sub{
-    background: linear-gradient(to right, rgb(12, 12, 236), rgba(0, 0, 255, 0.77)) ;
+     background: linear-gradient(to right, rgb(12, 12, 236), rgba(0, 0, 255, 0.77)) ;
       border: none;
       border-radius: 5px;
       color: white;
 }
 #about{
     display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 6rem;
+}
+.about-image{
+    position: absolute;
+}
+.sec-img{
+    position: relative;
+    top: 8rem;
+    z-index: 0;
+    width: 200px;
+    animation: sec-img 2s ease-in-out infinite alternate;
+}
+.first-img{
+    position: relative;
+    margin-left: 7rem;
+    margin-top: -7rem;
+    z-index: 9;
+    height: 310px;  
+}
+.third-img{
+    position: relative;
+    width: 250px;
+    margin-top: -4rem;
+    animation: sec-img 2s ease-in-out infinite alternate;
+}
+@keyframes sec-img{
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(1.1);
+    }
+}
+.range{
+    width: 70px;
+    height: 4px;
+    background-color:rgb(16, 16, 138);
+}
+.range-button{
+    width: 10px;
+    height: 4px;
+    background-color: white;
+    animation: range-button 7s infinite ease-in-out;
+}
+@keyframes range-button{
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(60px);
+    }
+}
+.about{
+    display: flex;
+    align-items: center;
+    gap: 19px;
+}
+.about-content{
+    width: 500px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 15px;
+}
+.we{
+    font-weight: 900;
+    font-size: 30px;
+}
+.over{
+    color: grey;
+}
+.soft-line{
+    width: 460px;
+    height: 6px;
+    background-color: grey;
+}
+.soft-range{
+    width: 370px;
+    height: 6px;
+    background-color:rgb(16, 16, 138) ;
+}
+.cyber-range{
+    width: 300px;
+    height: 6px;
+    background-color:rgb(16, 16, 138);
+}
+.AI-range{
+    width: 400px;
+    height: 6px;
+    background-color:rgb(16, 16, 138);
+}
+.web-range{
+    width: 280px;
+    height: 6px;
+    background-color:rgb(16, 16, 138);
+}
+.soft-percent{
+    display: flex;
+    justify-content: space-between;
+}
+.about-us{
+    color: rgb(16, 16, 138);
+    font-size: 20px;
+}
+.percent{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.soft{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.learn{
+    background: linear-gradient(to right, rgb(12, 12, 236), rgba(0, 0, 255, 0.77)) ;
+      border: none;
+      width: fit-content;
+      padding: 10px 20px;
+      border-radius: 20px;
+      color: white;
+      cursor: pointer;
+}
+.learn:hover{
+    background: linear-gradient(to top, rgb(12, 12, 236), rgba(42, 42, 159, 0.77)) ;
+     
+}
+#services{
+    background-color: whitesmoke;
+    padding: 40px 60px 90px;
+    margin-top: 6rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+.ser{
+    text-align: center;
+    color: rgb(16, 16, 138);
+    font-size: 20px;
+}
+.service{
+    font-size: 35px;
+    width: 500px;
+    font-weight: 900;
+    text-align: center;
+    margin: 0 auto;
+}
+.services-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+}
+.ser-range{
+    width: 80px;
+    height: 6px;
+    background-color:rgb(16, 16, 138);
+}
+.ser-button{
+    width: 15px;
+    height: 15px;
+    background-color: rgb(16, 16, 138);
+    margin-top: -5px;
+    border-radius: 50px;
+    animation: ser-range-button 3s infinite ease-in-out;
+}
+@keyframes ser-range-button{
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(65px);
+    }
+}
+.services-sec{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr;
+    gap: 20px;
+    height: 40rem;
+}
+.first-ser{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+}
+.first-ser :nth-child(2){
+    font-size: 25px;
+    font-weight: 800;
+}
+.first-ser :nth-child(2):hover{
+    color: rgb(11, 11, 203);
+}
+#pages{
+    background-color: navy;
+    width: 100vw;
+    height: 85vh;
+    display: flex;
+    justify-content: space-around;
+    padding-top: 56px;
+}
+.pages-con{
+    width: 400px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+.pages-con :first-child{
+    color:  rgb(11, 11, 203);
+    height: fit-content;
+    width: fit-content;
+    padding: 30px;
+    background-color: white;
+    border-radius: 50%;
+}
+.pages-con :nth-child(2){
+    font-size: 1.6rem;
+    font-weight: 800;
+}
+.pages-con :nth-child(3){
+    font-size: 2rem;
+    font-weight: 700;
+}
+.pages-con :nth-child(4){
+    font-size: 1.2rem;
+}
+.count{
+    width: 450px;
+    height: 100px;
+    display: flex;
+     justify-content: space-around;
+     align-items: center;
+     background-color: rgb(255, 255, 255);
+     box-shadow: 0px 1px 10px black;
+     border-radius: 10px;
+     position: relative;
+     left: 32rem;
+     bottom: 55px;
+}
+.counting-numbers{
+    text-align: center;
+}
+.counting-numbers :first-child{
+    font-size: 2.5rem;
+    font-weight: 900;
+    color: navy;
+}
+.counting-numbers :last-child{
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+.working-process{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr;
+    gap: 3rem;
+    height: 30rem;
+    margin-top: 5rem;
+    padding: 0px 20px;
+}
+.first-work{
+    grid-row: span 2;
+    background-image: url(/images/here-section-image_files/pro_05-1000x1000.jpg);
+    background-size: cover;
+    height: 30rem;
+    width: 25rem;
+    border-radius: 10px;
+    
+}
+.real-work{
+    background-color: navy;
+    width: 25rem;
+    height: 30rem;
+    opacity: 0.9;
+    border-radius: 10px;
+    color: white;
+    padding: 70px 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.real-work :first-child{
+    font-size: 1.1rem;
+}
+.real-work :nth-child(2){
+    font-size: 3rem;
+    font-weight: 800;
+}
+.real-work :last-child{
+    font-size: 1.3rem;
+    width: fit-content;
+    height: fit-content;
+    background: linear-gradient(to left,rgb(54, 54, 248), navy);
+    padding: 10px 30px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.sec-work{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+}
+.sec-work :first-child{
+    font-size: 2.5rem;
+    font-weight: 900;
+    color: navy;
+}
+.sec-work :nth-child(2){
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+.sec-work :last-child{
+    font-size: 1.1rem;
+}
+.projects{
+    height: 65vh;
+    width: 100vw;
+    margin-top: 5rem;
+    background-color: navy;
+    color: white;
+    text-align: center;
+    padding: 40px 0px 0px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.projects :first-child{
+    color: rgb(228, 226, 226);
+}
+.projects :nth-child(2){
+    font-size: 2rem;
+    width: 500px;
+    font-weight: 700;
+    margin: 0 auto;
+}
+.image-text{
+    width: fit-content;
+    height: fit-content;
+    background-color: white;
+    border-radius: 7px;
+    padding: 20px;
+    text-align: center;
+    /* margin-left: 2.1rem; */
+    margin:0 auto; 
+    box-shadow: 0px 1px 10px black;
+    position: relative;
+    top: -3rem;
+}
+.img{
+    border-radius: 7px;
+}
+.image-text :first-child{
+    font-size: 1.6rem;
+}
+.image-text :last-child{
+    color: rgb(26, 214, 239);
+}
+.image-slider{
+    display: flex;
+    justify-content: space-around;
+    margin-top: -15rem;
+}
+.pricing{
+    padding: 60px;
+}
+.p{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;;
+}
+.p :first-child{
+    color: rgb(23, 23, 226);
+    text-transform: uppercase;
+}
+.p :nth-child(2){
+    font-size: 2.6rem;
+    font-weight: 800;
+}
+.p-range{
+    background-color: navy;
+    width: 80px;
+    height: 4px;
+}
+.p-button{
+    width: 10px;
+    height: 10px;
+    margin-top: -21.8px;
+    margin-left: -70px;
+    border-radius: 50%;
+    background-color: navy;
+    animation: ser-range-button 3s infinite ease-in-out;
+}
+.price-tag{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
+    height: 30rem;
+}
+.first-p-tag{
+    background-color: white;
+    border-radius: 10px;
+    padding-top: 20px;
+    height: 30rem;
+    box-shadow: 2px 2px 9px whitesmoke, -2px -2px 9px whitesmoke;
+}
+.sec-p-tag{
+    background: linear-gradient(to right, rgb(25, 25, 155), rgb(0, 0, 255)); 
+    border-radius: 10px;
+    padding-top: 20px;
+    height: 30rem;
+    color: white;
+}
+.sec-p-tag .fa-check, .sec-p-tag .fa-cog{
+    color: white;
+}
+.thi-p-tag{
+    background-color: white;
+    border-radius: 10px;
+    padding-top: 20px;
+    height: 30rem;
+    box-shadow: 2px 2px 9px whitesmoke, -2px -2px 9px whitesmoke;;
+
+}
+.tag-con{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: -30px;
+}
+.tg{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+.line{
+    width: 250px;
+    height: 2px;
+    background-color: gray;
+}
+.tags-and-fa{
+    width: 250px;
+    display: flex;
+    justify-content: space-around;
+}
+.tags-line{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-top: 30px;
+}
+.span-shi{
+    font-size: 3rem;
+    font-weight: 600;
+}
+.span-shi span{
+   font-size: 25px;
+}
+.fa-check, .fa-cog, .fa-calendar, .fa-user{
+    color: blue;
+}
+.buy{
+    background: linear-gradient(to top, rgb(12, 12, 236), rgba(0, 0, 255, 0.77)) ;
+    border: none;
+    width: fit-content;
+    padding: 10px 30px;
+    border-radius: 20px;
+    color: white;
+    cursor: pointer;
+    margin-top: 2rem;
+}
+.silver{
+    color: white;
+    background-color: blue;
+    width: fit-content;
+    height: fit-content;
+    padding:7px 30px ;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    
+}
+.gold{
+    color: blue;
+    background-color: white;
+    width: fit-content;
+    height: fit-content;
+    padding:7px 30px ;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    
+}
+.testimonial{
+    background-color: whitesmoke;
+    width: 100vw;
+    height: 100vh;
+    padding: 70px 40px 0px;
+}
+.customers-remark{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    gap: 30px;
+    height: 25rem;
+}
+.bg-rmk{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    background-color: white;
+    border-radius: 10px;
+    padding: 40px 20px 60px;
+}
+.bg-rmk :nth-child(2){
+   text-align: center;
+   color: gray;
+}
+.customers-profile{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: -40px;
+    gap: 7px;
+}
+.customers-profile :first-child img{
+    width: 80px;
+    border-radius: 50%;
+}
+.customers-profile :nth-child(2){
+    font-weight: 900;
+    color: rgb(47, 11, 11);
+    font-size: 20px;
+}
+.customers-profile :last-child{
+    color: gray;
+}
+.bars{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+}
+.bar1{
+   height: 10px;
+   width: 40px;
+   background-color: blue;
+   border-radius: 10px;
+}
+.bar2{
+    height: 10px;
+    width: 30px;
+    background-color: blue;
+    border-radius: 10px;
+    opacity: 0.6;
+ }
+
+.bar3{
+    height: 10px;
+    width: 30px;
+    background-color: blue;
+    border-radius: 10px;
+    opacity: 0.6;
+ }
+ #blog{
+    margin-top: 7rem;
+ }
+ .blog-content{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: 1fr;
+    height: 35rem;
+    gap: 30px;
+    padding: 10px 60px 90px;
+ }
+ .blog-content1{
+    background-color: white;
+    padding-top: 10px ;
+    border-radius: 5px;
+    box-shadow: 2px 2px 9px whitesmoke, -2px -2px 9px whitesmoke;
+}
+
+.blog-img :first-child{
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+}
+.itc{
+    width: fit-content;
+    padding: 5px 10px;
+    color: white;
+    border-radius: 10px;
+    background: linear-gradient(to right, blue, rgb(157, 157, 250));
+    position: relative;
+    bottom: 42px;
+    left: 150px;
+}
+.blog-date{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.blog-date :first-child{
+    display: flex;
+    gap: 15px;
+}
+.techh{
+    font-weight: 800;
+    font-size: 1.2rem;
+}
+.wed{
+    color: rgb(82, 81, 81);
+}
+.le{
+    display: flex;
+    gap: 10px;
+}
+.le a{
+    text-decoration: none;
+    font-weight: 900;
+    color: rgb(4, 4, 172);
+
+}
+.logos{
+    width: 100vw;
+    height: 25vh;
+    background-color: navy;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    padding:0px 40px;
+}
+/* .parner{
+    display: block;
+    border: 1px solid black;
+}
+.parner:hover .show{
+    animation
+}
+,.parner:hover .hide{
+display: block;
+} */
+footer{
+    width: 100vw; 
+    height: 70vh;
+    background: linear-gradient(to top, rgb(232, 241, 244), lightblue);
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 30px;
+    padding: 70px 20px;
+}
+.bt-footer{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30px;
+}
+.bt-footer :nth-child(2){
+    color: rgb(82, 81, 81);
+}
+.accounts{
+display: flex;
+gap: 20px;
+}
+.acc{
+    width: fit-content;
+    height: fit-content;
+    background-color: white;
+    padding: 7px;
+    border-radius: 50%;
+}
+.acc:hover{
+    background-color: lightblue;
+    transition: all 100ms ease-in-out;
+}
+.itser{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30px;
+}
+.iiit{
+    font-size: 1.3rem;
+    font-weight: 900;
+}
+.it-list{
+    color: rgb(82, 81, 81);
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.f-list{
+    display: flex;
+    gap: 30px;
+}
+.adc{
+    color: rgb(72, 72, 251);
+}
+#em{
+    border-radius: 20px;
+}
+.fa-send{
+    width: fit-content;
+    height: fit-content;
+    padding: 12px; 
+    background-color: blue;
+    color: white;
+    border-radius: 50%;
+    margin-left: -40px;
+}
+.foot{
+    width: 100vw;
+    background-color: rgb(239, 250, 250);
+    height: 10vh;
+    color:  rgb(82, 81, 81);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 20px;
+}
+.robo{
+    width: 5px;
+    height: 5px;
+    background-color: blue;
+    border-radius: 50%;
+}
+.bottom-navs{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+.bottom-navs a{
+    text-decoration: none;
+    color:  rgb(82, 81, 81);
+}
+.fa-caret-up{
+    color: white;
+    background: linear-gradient(to right, rgb(12, 12, 236), rgba(0, 0, 255, 0.77)) ;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 30px;
+    right: 50px;
+    padding: 10px 15px;
+    text-decoration: none;
 }
