--- a/css/style2.css
+++ b/css/style2.css
@@ -1,4 +1,4 @@
-@media (max-width:768px) and (min-width:440px){
+@media (max-width:1000px) and (min-width:450px){
     nav{
         display: none;
     }
@@ -125,4 +125,16 @@ input::placeholder{
 .add :first-child{
     font-weight: 700;
 }
+.fa-caret-up{
+    right: 30px;
+    z-index: 20;
+}
+#about{
+    flex-direction: column-reverse;
+    align-items: center;
+}
+ .services-sec{
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, 1fr);
+ }
 }
