--- a/css/style3.css
+++ b/css/style3.css
@@ -1,4 +1,4 @@
-@media (max-width:440px) and (min-width:250px){
+@media (max-width:450px) and (min-width:250px){
     nav{
         display: none;
     }
@@ -68,8 +68,8 @@
     }
     .sec1{
         display: block;
-        clip-path: polygon(49% 100%, 100% 85%, 100% 0%, 0% 0%, 0% 85%);
-        height: 63rem;
+        clip-path: polygon(49% 87%, 100% 80%, 100% 0%, 0% 0%, 0% 80%);
+        height: 60rem;
     }
     .sec1 .first-sec{
         padding: 20px 20px;
@@ -85,17 +85,16 @@
         border-radius: 10px;
         height: fit-content;
         background-color: white;
-        padding: 20px 10px 30px;
-
+        padding: 20px 6px 30px;
         margin: auto;
     }
     form{
         display: flex;
         flex-direction: column;
-        gap: 10px;
+        gap: 7px;
     }
     h2{
-        width: 150px;
+        width: 100px;
         text-align: center;
         margin: auto;
     }
@@ -108,5 +107,54 @@
     input::placeholder{
         color: grey;
         padding: 10px;
+    }
+    #about{
+        margin-top: -8rem;
+        flex-direction: column;
+        align-items: center;
+    }
+    .sec-img{
+        width: 100px;
+        margin-top: -2rem;
+    }
+    .first-img{
+        height: 150px;
+        margin-top: -1rem;
+        
+    }
+    .third-img{
+        width: 100px;
+        margin-top: -0.5rem;
+    }
+    .fa-caret-up{
+        right: 12px;
+        padding: 5px 10px;
+        text-decoration: none;
+        z-index: 20;
+    }
+    .about-content{
+      width: 300px;
+    }
+    .we{
+        font-size: 20px;
+    }
+    .soft-line{
+        width: 250px;
+    }
+    .soft-range{
+       width: 150px;
+    }
+    .cyber-range{
+      width: 150px;
+    }
+    .AI-range{
+      width: 150px;
+    }
+    .web-range{
+        width: 150px;
+    }
+    .services-sec{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, 1fr);
     }
 }
